# manga-graph

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  VECTOR_SEARCH_IMPLEMENTATION.md  analyze_brands.py  check_duplicates.py  check_include_related_logic.py  debug_api_include_related.py  debug_include_related.py  debug_search.py  delete_properties.py  docker-compose.yml  extract_brands.py  import_full_data.py  main.py  openapi.json  package-lock.json  prompt.md  pyproject.toml  quick_search.py  requirements.txt  run_analysis.py  sample.cypher  search_metadata.py  simple_analysis.py  test_api_search.py  test_magazine_edge_fix.py  test_magazine_extraction.py  test_magazine_fix_direct.py  test_multiple_authors.py  test_naruto_magazine_publisher.py  test_neo4j.py  test_neo4j_service.py  test_no_direct_work_publisher.py  test_normalization.py  test_normalization_import.py  test_performance.py  test_performance_auto.py  (+3 more)
backend/: Dockerfile  database.py  database_old.py  main.py  models.py  requirements.txt  simple_test.py  test_main.py
config/: env.py
docs/: neo4j_name_variation_investigation_report.md  vector_search_guide.md
examples/: practical_vector_example.py  vector_search_example.py
frontend/: package-lock.json  package.json
scripts/: add_embedding_title_en_to_aura.py  add_synopsis_from_manga_csv.py  add_vector_embeddings.py  analyze_manga_entries.py  analyze_name_variations_details.py  check_normalization_status.py  cleanup_duplicates.py  create_neo4j_indexes.py  create_sample_data.py  extract_magazine_brands.py  final_author_cleanup.py  (+14 more)
(+87 files in other folders)
